http://bugs.sakaiproject.org/jira/browse/SAK-4178
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@9158 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/webapp/css/profile.css
+++ b/profile-app/src/webapp/css/profile.css
@@ -1,5 +1,7 @@
 /* CSS for profile tool */
 
+/*definitions subsumed in standard stylesheets keep around for a bit (gsilver) */
+
 .editProfile{
  vertical-align: top;
  text-align:left;
